--- a/cairo/Cargo.toml
+++ b/cairo/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["The gtk-rs Project Developers"]
 keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
 readme = "README.md"
 documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/cairo/"
-version = "0.15.0"
+version = "0.15.0-colors"
 description = "Rust bindings for the Cairo library"
 repository = "https://github.com/gtk-rs/gtk-rs-core"
 edition = "2018"
@@ -35,6 +35,7 @@ features = ["dox"]
 [dependencies.glib]
 optional = true
 path = "../glib"
+version = "0.15.0"
 
 [dependencies.freetype-crate]
 package = "freetype"
@@ -42,7 +43,7 @@ version = "0.7.0"
 optional = true
 
 [dependencies]
-ffi = { package = "cairo-sys-rs", path = "sys" }
+ffi = { package = "cairo-sys-rs", path = "sys", version = "0.15.0" }
 libc = "0.2"
 bitflags = "1.0"
 thiserror = "1.0.10"
