--- a/glib/gobject-sys/Cargo.toml
+++ b/glib/gobject-sys/Cargo.toml
@@ -30,7 +30,7 @@ homepage = "http://gtk-rs.org/"
 keywords = ["gobject", "ffi", "gtk-rs", "gnome"]
 license = "MIT"
 name = "gobject-sys"
-repository = "https://github.com/gtk-rs/gtk-rs-core"
+repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 version = "0.15.0"
 edition = "2018"
 [package.metadata.docs.rs]
