--- a/cairo/Cargo.toml
+++ b/cairo/Cargo.toml
@@ -5,10 +5,10 @@ homepage = "https://gtk-rs.org/"
 authors = ["The gtk-rs Project Developers"]
 keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
 readme = "README.md"
-documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/cairo/"
+documentation = "https://e-monkeys-tech/gtk4-rs-core/stable/latest/docs/cairo/"
 version = "0.15.0-colors"
 description = "Rust bindings for the Cairo library"
-repository = "https://github.com/gtk-rs/gtk-rs-core"
+repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 edition = "2018"
 
 [lib]
