--- a/gdk-pixbuf/sys/Cargo.toml
+++ b/gdk-pixbuf/sys/Cargo.toml
@@ -34,7 +34,7 @@ homepage = "http://gtk-rs.org/"
 keywords = ["gdk-pixbuf", "ffi", "gtk-rs", "gnome"]
 license = "MIT"
 name = "gdk-pixbuf-sys"
-repository = "https://github.com/gtk-rs/gtk-rs-core"
+repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 version = "0.15.0"
 edition = "2018"
 [package.metadata.docs.rs]
