--- a/glib-macros/Cargo.toml
+++ b/glib-macros/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "glib-macros"
-documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib_macros/"
+documentation = "https://e-monkeys-tech/gtk4-rs-core/stable/latest/docs/glib_macros/"
 homepage = "https://gtk-rs.org/"
 authors = ["The gtk-rs Project Developers"]
 description = "Rust bindings for the GLib library, proc macros crate"
 version = "0.15.0"
 keywords = ["glib", "gtk-rs", "gnome", "GUI"]
-repository = "https://github.com/gtk-rs/gtk-rs-core"
+repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 license = "MIT"
 edition = "2018"
 
