--- a/glib/Cargo.toml
+++ b/glib/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "glib"
-documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/"
+documentation = "https://e-monkeys-tech/gtk4-rs-core/stable/latest/docs/glib/"
 homepage = "https://gtk-rs.org/"
 authors = ["The gtk-rs Project Developers"]
 description = "Rust bindings for the GLib library"
 readme = "README.md"
 version = "0.15.0"
 keywords = ["glib", "gtk-rs", "gnome", "GUI"]
-repository = "https://github.com/gtk-rs/gtk-rs-core"
+repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 license = "MIT"
 exclude = [
     "gir-files/*",
