--- a/graphene/sys/Cargo.toml
+++ b/graphene/sys/Cargo.toml
@@ -26,7 +26,7 @@ homepage = "https://gtk-rs.org/"
 keywords = ["graphene", "ffi", "gtk-rs", "gnome"]
 license = "MIT"
 name = "graphene-sys"
-repository = "https://github.com/gtk-rs/gtk-rs-core"
+repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 version = "0.15.0"
 edition = "2018"
 [package.metadata.docs.rs]
