--- a/cairo/Cargo.toml
+++ b/cairo/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "cairo-rs"
+name = "cairo-rs-colors"
 license = "MIT"
-homepage = "https://gtk-rs.org/"
-authors = ["The gtk-rs Project Developers"]
 keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
 readme = "README.md"
 documentation = "https://e-monkeys-tech/gtk4-rs-core/stable/latest/docs/cairo/"
-version = "0.15.0-colors"
+version = "0.15.0"
 description = "Rust bindings for the Cairo library"
 repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
 edition = "2018"
